// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files 1`] = `
[
  "endpoints.ts",
  "error.form-group-fac.ts",
  "error.form.ts",
  "error.model.ts",
  "error.properties.ts",
  "error.test-obj-fac.ts",
  "index.ts",
  "pet.form-group-fac.ts",
  "pet.form.ts",
  "pet.model.ts",
  "pet.properties.ts",
  "pet.test-obj-fac.ts",
  "pets.model.ts",
]
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: endpoints.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #endpoints-ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum Endpoints {
  pets = '/pets',
  pets2 = '/pets/{petId}',
}
export interface IEndpoints {
  readonly pets: string;
  readonly pets2: string;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: error.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface IErrorForm {
    code: FormControl<number>;
    message: FormControl<string>;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: error.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IErrorForm } from './error.form';

export function ErrorFormGroupFac(): FormGroup<IErrorForm> {
  return new FormGroup<IErrorForm>({
    code: new FormControl<number>(0, { validators: Validators.required, nonNullable: true } ),
    message: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: error.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IError {
  code?: number;
  message?: string;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: error.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum ErrorProperties {
  CODE = 'code',
  MESSAGE = 'message',
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: error.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { ErrorProperties } from './error.properties';

export function createTestError() {
    return { 
      [ErrorProperties.CODE]: 0,
      [ErrorProperties.MESSAGE]: 'MESSAGE', 
    };
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: index.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #index.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export * from './error.form-group-fac';
export * from './error.form';
export * from './error.model';
export * from './error.properties';
export * from './error.test-obj-fac';
export * from './pet.form-group-fac';
export * from './pet.form';
export * from './pet.model';
export * from './pet.properties';
export * from './pet.test-obj-fac';
export * from './pets.model';
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.form.ts 1`] = `
"/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup } from '@angular/forms'; //NOSONAR

export interface IPetForm {
    id: FormControl<number | null | undefined>;
    name: FormControl<string>;
    tag: FormControl<string | null | undefined>;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.form-group-fac.ts 1`] = `
"/* eslint-disable no-useless-escape */
/* eslint-disable @typescript-eslint/no-unused-vars */
/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #form-group-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
import { FormControl, FormArray, FormGroup, Validators } from '@angular/forms'; //NOSONAR
import { IPetForm } from './pet.form';

export function PetFormGroupFac(): FormGroup<IPetForm> {
  return new FormGroup<IPetForm>({
    id: new FormControl<number | null | undefined>(null),
    name: new FormControl<string>('', { validators: Validators.required, nonNullable: true } ),
    tag: new FormControl<string | null | undefined>(null),
  });
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IPet {
  id?: number | null;
  name?: string;
  tag?: string | null;
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.properties.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model-properties.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
/* tslint:disable */
export enum PetProperties {
  ID = 'id',
  NAME = 'name',
  TAG = 'tag',
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pet.test-obj-fac.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #test-object-factory.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */

import { PetProperties } from './pet.properties';

export function createTestPet() {
    return { 
      [PetProperties.ID]: 0,
      [PetProperties.NAME]: 'NAME',
      [PetProperties.TAG]: 'TAG', 
    };
}
"
`;

exports[`Url Based - Full Integration Tests Sample PetStore Service should generate files: pets.model.ts 1`] = `
"/* istanbul ignore file */
/**
 * This file is generated by the openapi-ts-generator
 * #model.ts.hbs
 * For issues or feature request, visit the repo: https://github.com/ikemtz/openapi-ts-generator
 * Do not edit.
 */
// eslint-disable-next-line @typescript-eslint/no-empty-interface
export interface IPets {
}
"
`;
